Favicon and Mars Info Spacing Fix

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,6 @@
 
 .displayMars {
   text-align: center;
-  padding-top: 2.5em;
   padding-bottom: 5em;
   display: flex;
   justify-content: center;
